Adding footer, head, and header partials

--- a/views/urls_index.ejs
+++ b/views/urls_index.ejs
@@ -2,8 +2,9 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <title>TinyApp</title>
-  <meta charset="utf-8">
+
+  <% include ./partials/_head %>
+
 </head>
 
 <body>
@@ -13,5 +14,11 @@
     <% } %>
   </ul>
 </body>
+
+<footer>
+
+  <% include ./partials/_footer %>
+
+</footer>
 
 </html>
