--- a/views/urls_show.ejs
+++ b/views/urls_show.ejs
@@ -1,14 +1,22 @@
 <!-- urls_show.ejs -->
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-  <title>TinyApp</title>
-  <meta charset="utf-8">
+
+  <% include ./partials/_head %>
+
 </head>
 
 <body>
   <h1><%= longURL %></h1>
   <h1><%= shortURL %></h1>
 </body>
+
+<footer>
+
+  <% include ./partials/_footer %>
+
+</footer>
 
 </html>
