Added ability to delete urls. Added edit links on /urls/ page

--- a/views/urls_index.ejs
+++ b/views/urls_index.ejs
@@ -12,7 +12,7 @@
     <ul>
       <% for (let url in urls) { %>
       <li>
-        <form method="POST" action="<% delete urls.url %>"><%= urls[url] %> (<%= url %>)
+        <form method="POST" action="/urls/<%= url %>/delete"><%= urls[url] %> &rarr; <%= url %> <a href="/urls/<%= url %>/">Edit</a>
           <input type="submit" value="Delete">
         </form>
       </li>
