Added links to full list of shortened URLs to footer of url_show and urls_new. Edited generateRandomString.js to pick 6 different random indices instead of choosing the same random index 6 times

--- a/views/urls_index.ejs
+++ b/views/urls_index.ejs
@@ -8,14 +8,14 @@
     <% include ./partials/_header %>
   </header>
 
-  <body>
+  <body style="font-size:20px; padding:50px;">
     <ul>
       <table>
         <% for (let url in urls) { %>
           <tr>
             <td><form method="POST" action="/urls/<%= url %>/delete"><%= url %> &rarr; <%= urls[url] %></td>
             <td><a href="/urls/<%= url %>/"><strong>Edit</strong></a></td>
-            <td><input type="submit" value="Delete"></td>
+            <td><input type="submit" class="btn-danger" value="Delete"></td>
             </form>
           </tr>
         <% } %>
