--- a/views/urls_new.ejs
+++ b/views/urls_new.ejs
@@ -19,6 +19,8 @@
   </body>
 
   <footer>
+    <a href="/urls">See full list of shortened URLs</a>
     <% include ./partials/_footer %>
   </footer>
+
 </html>
