--- a/views/urls_new.ejs
+++ b/views/urls_new.ejs
@@ -12,8 +12,8 @@
   <body style="font-size:20px; padding:50px;">
 
     <form action="/urls" method="POST" style="margin:50px;">
-      <label for="longURL">Enter a URL:</label>
-      <input id="longURL" type="text" name="longURL" placeholder="http://" style="width: 300px">
+      <label for="longUrl">Enter a URL:</label>
+      <input id="longUrl" type="text" name="longUrl" placeholder="http://" style="width: 300px">
       <input type="submit" value="Submit">
     </form>
   </body>
