Added ability to update shortened urls

--- a/views/urls_show.ejs
+++ b/views/urls_show.ejs
@@ -10,10 +10,8 @@
   </header>
 
   <body style="font-size:20px; padding:50px;">
-    <h4>Shortened URL: <%= shortUrl %></h4>
-    <form action="/urls/<%= shortUrl %>" method="POST">
-      <input id="longUrl" type="text" name="longUrl" placeholder="<%= longUrl %>" style="width: 300px">
-      <input type="submit" value="Update">
+    <h4><%= shortUrl %>:</h4>
+    <form action="/urls/<%= shortUrl %>" method="POST"> <%= longUrl %> <input type="submit" value="Update">
     </form>
   </body>
 
