--- a/views/partials/_header.ejs
+++ b/views/partials/_header.ejs
@@ -1,1 +1,6 @@
 <h3>Sterns & Caulfield - Hand-crafted URL Shortening</h3>
+
+<form action="urls" method="POST" style="margin:50px;">
+  <label for="name">Username: </label> <input id="name" type="text" name="name" placeholder="Enter your name :D" style="width: 300px">
+  <input type="submit" value="Sign In">
+</form>
