Cookie username now displays with logged in as message

--- a/views/partials/_header.ejs
+++ b/views/partials/_header.ejs
@@ -4,3 +4,5 @@
   <label for="name">Username: </label> <input id="name" type="text" name="name" placeholder="Enter your name :D" style="width: 300px">
   <input type="submit" value="Sign In">
 </form>
+
+<h6> <% if (username) { %>Logged in as: <%= username %> <% } %></h6>
