--- a/views/partials/_header.ejs
+++ b/views/partials/_header.ejs
@@ -6,7 +6,7 @@
   <input type="submit" value="Sign In">
 </form>
 <% } else { %>
-  <form action="/login" method="POST">
+  <form action="/logout" method="POST">
     <label for="name">Logged in as: </label> <input id="name" type="text" name="name" placeholder="<%= username %>" style="width: 300px">
     <input type="submit" value="Log Out">
   </form>
