Fixed the login/logout functionality again. Fun with git

--- a/views/partials/_footer.ejs
+++ b/views/partials/_footer.ejs
@@ -1,1 +1,1 @@
-<p class="text-center text-muted">© Copyright 2034</p>
+<p class="text-muted">Disrupting the URL shortening marketing since 2018</p>
