--- a/views/partials/_header.ejs
+++ b/views/partials/_header.ejs
@@ -1,4 +1,4 @@
-<h3>Sterns & Caulfield - Hand-crafted URL Shortening</h3>
+<h3>Sterns & Caulfield - Affordable luxury URL Shortening</h3>
 
 <% if (!username) { %>
 <form action="/login" method="POST">
@@ -7,7 +7,6 @@
 </form>
 <% } else { %>
   <form action="/logout" method="POST">
-    <label for="name">Logged in as: </label> <input id="name" type="text" name="name" placeholder="<%= username %>" style="width: 300px">
-    <input type="submit" value="Log Out">
+    <%= username %><input type="submit" value="Log Out">
   </form>
 <% } %>
