Added nav links to header and footer partials. Removed nav links from all other pages.

--- a/views/partials/_header.ejs
+++ b/views/partials/_header.ejs
@@ -1,1 +1,12 @@
-<h3>Sterns & Caulfield - Affordable luxury URL Shortening</h3>
+<header>
+
+  <h3>Sterns & Caulfield - Affordable luxury URL Shortening</h3>
+
+  <nav class="nav">
+    <ul>
+      <li><a href="../register">Register</a></li>
+      <li><a href="../login">Login</a></li>
+    </ul>
+  </nav>
+
+</header>
