--- a/views/login.ejs
+++ b/views/login.ejs
@@ -8,11 +8,11 @@
     <% include ./partials/_header %>
   </header>
 
-  <body>
+  <body style="font-size:20px; padding:50px;">
     <form action="/login" method="POST">
       <input type="email" name="email" placeholder="example@abc.xyz" style="width: 300px">
       <input type="password" name="password" placeholder="********" style="width: 300px">
-      <input type="submit" value="Register">
+      <input type="submit" value="Log In">
     </form>
   </body>
 
