--- a/views/urls_register.ejs
+++ b/views/urls_register.ejs
@@ -8,15 +8,15 @@
     <% include ./partials/_header %>
   </header>
 
-  <body>
+  <body style="font-size:20px; padding:50px;">
     <form action="/register" method="POST">
       <input type="email" name="email" placeholder="example@abc.xyz" style="width: 300px">
       <input type="password" name="password" placeholder="********" style="width: 300px">
       <input type="submit" value="Register">
+    </form>
   </body>
 
   <footer>
-    <a href="/urls">See full list of shortened URLs</a>
     <% include ./partials/_footer %>
   </footer>
 </html>
