Updated login handler to handle new users object and set cookies. Formatting changes to _header and _footer

--- a/views/partials/_header.ejs
+++ b/views/partials/_header.ejs
@@ -1,6 +1,6 @@
 <header>
 
-  <h3>Sterns & Caulfield - Affordable luxury URL Shortening</h3>
+  <h3><strong>Sterns & Caulfield</strong> - <em>Affordable luxury URL Shortening</em></h3>
 
   <nav class="nav">
     <ul>
