--- a/views/login.ejs
+++ b/views/login.ejs
@@ -9,11 +9,23 @@
   </header>
 
   <body style="font-size:20px; padding:50px;">
+
+    <% if (!users) { %>
+
     <form action="/login" method="POST">
       <input type="email" name="email" placeholder="example@abc.xyz" style="width: 300px">
       <input type="password" name="password" placeholder="********" style="width: 300px">
-      <input type="submit" value="Log In">
+      <input type="submit" value="Sign In">
     </form>
+
+    <% } else { %>
+
+    <form action="/login" method="POST">
+      <input type="submit" value="Log out">
+    </form>
+
+    <% } %>
+
   </body>
 
   <footer>
