Final commit for feature/user-registration branch

--- a/views/login.ejs
+++ b/views/login.ejs
@@ -20,7 +20,7 @@
 
     <% } else { %>
 
-    <form action="/login" method="POST">
+    <form action="/logout" method="POST">
       <input type="submit" value="Log out">
     </form>
 
