Added bcrypt and cookie-session. Not in use yet

--- a/views/partials/_footer.ejs
+++ b/views/partials/_footer.ejs
@@ -1,2 +1,3 @@
-<a href="/urls">See full list of shortened URLs</a>
+<a href="/urls">See the full list of shortened URLs</a>
+<a href="/urls/new"><em>Or</em>Shorten a new URL</a>
 <p class="text-muted">Disrupting the URL shortening market since 2018</p>
