--- a/views/login.ejs
+++ b/views/login.ejs
@@ -3,31 +3,18 @@
   <head>
     <% include ./partials/_head %>
   </head>
-
   <header>
     <% include ./partials/_header %>
   </header>
-
   <body style="font-size:20px; padding:50px;">
-
     <% if (!users) { %>
-
     <form action="/login" method="POST">
       <input type="email" name="email" placeholder="example@abc.xyz" style="width: 300px">
       <input type="password" name="password" placeholder="********" style="width: 300px">
-      <input type="submit" value="Sign In">
+      <input type="submit" value="Login">
     </form>
-
-    <% } else { %>
-
-    <form action="/logout" method="POST">
-      <input type="submit" value="Log out">
-    </form>
-
     <% } %>
-
   </body>
-
   <footer>
     <% include ./partials/_footer %>
   </footer>
