Small formatting changes before feature branch

--- a/views/urls_show.ejs
+++ b/views/urls_show.ejs
@@ -10,7 +10,7 @@
   </header>
 
   <body style="font-size:20px; padding:50px;">
-    <h4><%= shortUrl %>:</h4> <form action="/urls/<%= shortUrl %>" method="POST" style="margin:10px;"> <a href= <%= longUrl %> ><%= longUrl %> </a><input type="submit" value="Update">
+    <h4><%= shortUrl %> &rarr; </h4> <form action="/urls/<%= shortUrl %>" method="POST" style="margin:10px;"> <a href= <%= longUrl %> ><%= longUrl %> </a><input type="submit" value="Update">
     </form>
   </body>
 
