--- a/views/partials/_footer.ejs
+++ b/views/partials/_footer.ejs
@@ -1,3 +1,6 @@
-<a href="/urls">See the full list of shortened URLs</a>
-<a href="/urls/new"><em>Or</em>Shorten a new URL</a>
+<% if(users) { %>
+<a href="/urls">See all of your shortened URLs</a>
+<br>
+<a href="/urls/new"><em>Or</em> Shorten a new URL</a>
+<% } %>
 <p class="text-muted">Disrupting the URL shortening market since 2018</p>
