users can now see all short urls they've created. Cannot update shortURL

--- a/views/partials/_footer.ejs
+++ b/views/partials/_footer.ejs
@@ -1,6 +1,6 @@
 <% if(users) { %>
 <a href="/urls">See all of your shortened URLs</a>
 <br>
-<a href="/urls/new"><em>Or</em> Shorten a new URL</a>
+<a href="/urls/new"><em>Or</em> shorten a new URL</a>
 <% } %>
 <p class="text-muted">Disrupting the URL shortening market since 2018</p>
