Email and logout button now displaying on all pages. Error messages for incorrect login or register now display as HTML, not http errors.

--- a/views/login.ejs
+++ b/views/login.ejs
@@ -7,11 +7,14 @@
     <% include ./partials/_header %>
   </header>
   <body style="font-size:20px; padding:50px;">
+    <% if (message !== "") { %>
+      <h4 style="color: red;"><%= message %></h4>
+    <% } %>
     <% if (!users) { %>
     <form action="/login" method="POST">
       <input type="email" name="email" placeholder="example@abc.xyz" style="width: 300px">
       <input type="password" name="password" placeholder="********" style="width: 300px">
-      <input type="submit" value="Login">
+      <input type="submit" class="waves-effect waves-light btn" value="Login">
     </form>
     <% } %>
   </body>
