Changed header/footer text

--- a/views/partials/_footer.ejs
+++ b/views/partials/_footer.ejs
@@ -3,4 +3,4 @@
 <br>
 <a href="/urls/new"><em>Or</em> shorten a new URL</a>
 <% } %>
-<p class="text-muted">Disrupting the URL shortening market since 2018</p>
+<p class="text-muted">&copy; 2018</p>
