--- a/views/partials/_header.ejs
+++ b/views/partials/_header.ejs
@@ -1,4 +1,4 @@
-  <h3><strong>Sterns & Caulfield</strong> - <em>Affordable luxury URL Shortening</em></h3>
+  <h3><strong>Geoff's Tiny App</strong> - <em>handcrafted URL shortening</em></h3>
     <% if (!users) { %>
       <p>Welcome! Please <a href="/login">login</a>. Or <a href="/register">register</a> if you're new</p>
     <% } else { %>
