--- a/views/urls_index.ejs
+++ b/views/urls_index.ejs
@@ -9,7 +9,7 @@
   </header>
     <% if (!users) { %>
     <body>
-      <h3><em>You must be logged in to view your Luxury Short URLs (LSURLs). Click the link above to log in.</em></h3>
+      <h3><em>You must be logged in to view your. Click the link above to log in.</em></h3>
     </body>
     <% } else { %>
   <body style="font-size:20px; padding:50px;">
